--- a/assets/templates/forex/templates/account-types.html
+++ b/assets/templates/forex/templates/account-types.html
@@ -66,9 +66,84 @@
             <p>Open account</p>
           </footer>
         </div>
-        <div class="account__box"></div>
-        <div class="account__box"></div>
-        <div class="account__box"></div>
+        <div class="account__box">
+          <header>
+            <b>Classic Silver</b>
+            <p>Trading for experienced investors</p>
+          </header>
+          <p>Min First Deposit: $/£/€/500</p>
+          <p>Account Currency: USD/EUR/GBP</p>  
+          <p>Default Leverage: 1:50</p>
+          <p>Maximum Leverage: 1:400</p>
+          <p>Margin Call Level: 75%</p>
+          <p>Stop Out Level: 50%</p>
+          <p>Standard Lot Size on Forex, Indices & Commodities CFDs: Min 0.01 – Max 500</p>
+          <p>Standard Lot Size on Stocks: Min 1 – Max 1000</p>
+          <p>Online Chat Support</p>
+          <p>Platforms: Forex24 MT4 Desktop, Forex24 WebTrader & Mobile</p>
+          <p>Instruments: CFDs on Forex, Commodities, Indices, Metals, Energies & Stocks</p>
+          <p>Free E-book</p>
+          <p>Low Spreads & Commission</p>
+          <p>Access to Breaking News & Market Research</p>
+          <p>Account Executive Team Available 24/5</p>
+          <p>Online Phone Support</p>
+          <p>Trading Education Program</p>
+          <footer>
+            <p>Open account</p>
+          </footer>
+        </div>
+        <div class="account__box">
+          <header>
+            <b>Premium Golde</b>
+            <p>Advanced Trading For Serious Investors</p>
+          </header>
+          <p>Min First Deposit: $/£/€/1,000</p>
+          <p>Account Currency: USD/EUR/GBP</p>  
+          <p>Online Chat Support</p>
+          <p>Platforms: Forex24 MT4 Desktop, Forex24 WebTrader & Mobile</p>
+          <p>Default Leverage: 1:50</p>
+          <p>Maximum Leverage: 1:200</p>
+          <p>Margin Call Level: 75%</p>
+          <p>Stop Out Level: 50%</p>
+          <p>Standard Lot Size on Forex, Indices & Commodities CFDs: Min 0.01 – Max 500</p>
+          <p>Standard Lot Size on Stocks: Min 1 – Max 1000</p>          
+          <p>Instruments: CFDs on Forex, Commodities, Indices, Metals, Energies & Stocks</p>
+          <p>Free E-book</p>
+          <p>Extremely Low Spread & Commission</p>
+          <p>Access to Breaking News & Market Research</p>
+          <p>Account Executive Team Available 24/5</p>
+          <p>Online Phone Support</p>
+          <p>Trading Education Program</p>
+          <footer>
+            <p>Open account</p>
+          </footer>
+        </div>
+        <div class="account__box">
+          <header>
+            <b>Swap Free</b>
+            <p>Anyone Can Trade Swap Free!</p>
+          </header>
+          <p>Min First Deposit: €100</p>
+          <p>Account Currency: EUR</p>  
+          <p>Online Chat Support</p>
+          <p>Platforms: Forex24 MT4 Desktop, Forex24 WebTrader & Mobile</p>
+          <p>Default Leverage: 1:50</p>
+          <p>Maximum Leverage: 1:400</p>
+          <p>Margin Call Level: 75%</p>
+          <p>Stop Out Level: 50%</p>
+          <p>Standard Lot Size on Forex, Indices & Commodities CFDs: Min 0.01 – Max 500</p>
+          <p>Standard Lot Size on Stocks: Min 1 – Max 1000</p>          
+          <p>Instruments: CFDs on Forex, Commodities, Indices, Metals, Energies & Stocks</p>
+          <p>Free E-book</p>
+          <p>Competitive Spreads & Commissions</p>
+          <p>Access to Breaking News & Market Research</p>
+          <p>Account Executive Team Available 24/5</p>
+          <p>Online Phone Support</p>
+          <p>Trading Education Program</p>
+          <footer>
+            <p>Open account</p>
+          </footer>
+        </div>
         <div class="account__box"></div>
       </div>
     </div>
