--- a/assets/templates/forex/templates/account-types.html
+++ b/assets/templates/forex/templates/account-types.html
@@ -63,13 +63,13 @@
           <p>Competitive Spreads Only – No Commissions Access to Breaking News & Market Research</p>
           <p>Account Executive Team Available 24/5</p>
           <footer>
-            <p>Open account</p>
+            <a href="#">Open account</a>
           </footer>
         </div>
         <div class="account__box">
           <header>
             <b>Classic Silver</b>
-            <p>Trading for experienced investors</p>
+            <p>Trading for<br>experienced investors</p>
           </header>
           <p>Min First Deposit: $/£/€/500</p>
           <p>Account Currency: USD/EUR/GBP</p>  
@@ -89,13 +89,13 @@
           <p>Online Phone Support</p>
           <p>Trading Education Program</p>
           <footer>
-            <p>Open account</p>
+            <a href="#">Open account</a>
           </footer>
         </div>
         <div class="account__box">
           <header>
             <b>Premium Golde</b>
-            <p>Advanced Trading For Serious Investors</p>
+            <p>Advanced Trading For<br>Serious Investors</p>
           </header>
           <p>Min First Deposit: $/£/€/1,000</p>
           <p>Account Currency: USD/EUR/GBP</p>  
@@ -115,13 +115,13 @@
           <p>Online Phone Support</p>
           <p>Trading Education Program</p>
           <footer>
-            <p>Open account</p>
+            <a href="#">Open account</a>
           </footer>
         </div>
         <div class="account__box">
           <header>
             <b>Swap Free</b>
-            <p>Anyone Can Trade Swap Free!</p>
+            <p>Anyone Can Trade<br>Swap Free!</p>
           </header>
           <p>Min First Deposit: €100</p>
           <p>Account Currency: EUR</p>  
@@ -141,10 +141,33 @@
           <p>Online Phone Support</p>
           <p>Trading Education Program</p>
           <footer>
-            <p>Open account</p>
+            <a href="#">Open account</a>
           </footer>
         </div>
-        <div class="account__box"></div>
+        <div class="account__box">
+          <header>
+            <b>Zulutrade</b>
+            <p>Social &<br>Copytrading</p>
+          </header>
+          <p>Min First Deposit: $/£/€/100</p>
+          <p>Account Currency: EUSD/EUR/GBP</p>  
+          <p>Platforms: Desktop & Mobile</p>
+          <p>Default Leverage: 1:50</p>
+          <p>Maximum Leverage: 1:400</p>
+          <p>Margin Call Level: 75%</p>
+          <p>Stop Out Level: 50%</p>
+          <p>Standard Lot Size on Forex, Indices & Commodities CFDs: Min 0.01 – Max 500</p>         
+          <p>Online Chat Support</p>
+          <p>Instruments:CFDs on Forex, Commodities, Indices & Metals</p>
+          <p>Free E-book</p>
+          <p>Low Spreads & Commission</p>
+          <p>Access to Breaking News & Market Research</p>
+          <p>Account Executive Team</p>
+          <p>Available 24/5</p>
+          <footer>
+            <a href="#">Open account</a>
+          </footer>
+        </div>
       </div>
     </div>
   </section>
