--- a/assets/templates/forex/sass/blocks/account-types.scss
+++ b/assets/templates/forex/sass/blocks/account-types.scss
@@ -25,5 +25,108 @@
 
 .account__types {
   display: flex;
+  align-items: flex-start;
   justify-content: space-between;
+  padding-top: 100px;
 }
+
+.account__box {
+  position: relative;
+  width: 250px;
+  box-shadow: 0px 0px 7px 0px rgba(2, 2, 2, 0.35);
+  transition: 0.3s;
+  
+  &::after {
+    display: none;
+    content: "";
+    position: absolute;
+    left: 13px;
+    top: 45px;
+    width: 45%;
+    height: 45px;
+    background: linear-gradient(to bottom right,transparent 50%, $sc 50.7%);
+  }
+  
+  &::before {
+    display: none;
+    content: "";
+    position: absolute;
+    right: 12px;
+    top: 45px;
+    width: 45%;
+    height: 45px;
+    background: linear-gradient(to bottom left,transparent 50%, $sc 50.7%);
+  }
+  
+  &:hover {
+    &::after,
+    &::before {
+      display: block;
+      top: -45px;
+    }
+  }
+  
+  & header {
+    height: 65px;
+    margin-bottom: 20px;
+    padding-top: 10px;
+    color: #fff;
+    font-size: 18px;
+    text-align: center;
+    text-transform: uppercase;
+    background: $mc;
+    
+    & p {
+      margin: 0;
+      padding: 10px 0;
+      font-size: 10px;
+      font-weight: bold;
+      color: #fff;
+    }
+  }
+  
+  & p {
+    margin: 0;
+    padding: 10px 20px;
+    font-size: 15px;
+    font-weight: bold;
+  }
+  
+  & footer {
+    background: $mc;
+    
+    & a {
+      display: block;
+      padding: 15px 10px;
+      color: #fff;
+      font-size: 18px;
+      font-weight: bold;
+      text-align: center;
+      text-decoration: none;
+      text-transform: uppercase;
+      transition: 0.3s;
+      
+      &:hover {
+        color: $mc;
+        background: $sc;
+      }
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
