--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -852,10 +852,9 @@ body {
   width: 250px;
   -webkit-box-shadow: 0px 0px 7px 0px rgba(2, 2, 2, 0.35);
   box-shadow: 0px 0px 7px 0px rgba(2, 2, 2, 0.35);
-  -webkit-transition: 0.3s;
-  transition: 0.3s; }
+  -webkit-transition: bottom 1s ease-out 0.5s;
+  transition: bottom 1s ease-out 0.5s; }
   .account__box::after {
-    display: none;
     content: "";
     position: absolute;
     left: 13px;
@@ -865,7 +864,6 @@ body {
     background: -webkit-gradient(linear, left top, right bottom, color-stop(50%, transparent), color-stop(50.7%, #f2c318));
     background: linear-gradient(to bottom right, transparent 50%, #f2c318 50.7%); }
   .account__box::before {
-    display: none;
     content: "";
     position: absolute;
     right: 12px;
@@ -875,7 +873,6 @@ body {
     background: -webkit-gradient(linear, right top, left bottom, color-stop(50%, transparent), color-stop(50.7%, #f2c318));
     background: linear-gradient(to bottom left, transparent 50%, #f2c318 50.7%); }
   .account__box:hover::after, .account__box:hover::before {
-    display: block;
     top: -45px; }
   .account__box header {
     height: 65px;
