--- a/assets/templates/forex/templates/account-types.html
+++ b/assets/templates/forex/templates/account-types.html
@@ -66,7 +66,7 @@
             <a href="#">Open account</a>
           </footer>
         </div>
-        <div class="account__box">
+        <div class="account__box  account__box--silver">
           <header>
             <b>Classic Silver</b>
             <p>Trading for<br>experienced investors</p>
