--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -320,8 +320,7 @@ input::placeholder {
 
 .page-header {
   min-height: 730px;
-  background: #00aeef url("../img/header.png") top;
-  background-size: cover; }
+  background: #00aeef url("../img/header-t.png") top; }
 
 .page-header__logo {
   margin-top: 5px; }
