--- a/assets/templates/crypto-b/sass/blocks/page-header.scss
+++ b/assets/templates/crypto-b/sass/blocks/page-header.scss
@@ -1,7 +1,7 @@
 .page-header {
   min-height: 730px;
-  background: #00aeef url("../img/header.png") top;
-  background-size: cover;
+  background: #00aeef url("../img/header-t.png") top;
+  // background-size: cover;
 }
 
 .page-header__logo {
