--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -852,28 +852,19 @@ body {
   width: 250px;
   -webkit-box-shadow: 0px 0px 7px 0px rgba(2, 2, 2, 0.35);
   box-shadow: 0px 0px 7px 0px rgba(2, 2, 2, 0.35);
-  -webkit-transition: bottom 1s ease-out 0.5s;
-  transition: bottom 1s ease-out 0.5s; }
+  cursor: pointer; }
   .account__box::after {
     content: "";
     position: absolute;
-    left: 13px;
-    top: 45px;
-    width: 45%;
-    height: 45px;
-    background: -webkit-gradient(linear, left top, right bottom, color-stop(50%, transparent), color-stop(50.7%, #f2c318));
-    background: linear-gradient(to bottom right, transparent 50%, #f2c318 50.7%); }
-  .account__box::before {
-    content: "";
-    position: absolute;
-    right: 12px;
-    top: 45px;
-    width: 45%;
-    height: 45px;
-    background: -webkit-gradient(linear, right top, left bottom, color-stop(50%, transparent), color-stop(50.7%, #f2c318));
-    background: linear-gradient(to bottom left, transparent 50%, #f2c318 50.7%); }
-  .account__box:hover::after, .account__box:hover::before {
-    top: -45px; }
+    left: 5px;
+    top: -56px;
+    width: 240px;
+    height: 56px; }
+  .account__box:hover {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1); }
+    .account__box:hover::after {
+      background: url("../img/t-acc-most.png"); }
   .account__box header {
     height: 65px;
     margin-bottom: 20px;
@@ -910,3 +901,9 @@ body {
       .account__box footer a:hover {
         color: #2e2963;
         background: #f2c318; }
+
+.account__box--silver {
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
+  .account__box--silver:hover header {
+    background: #999999; }
