--- a/assets/templates/forex/sass/blocks/account-types.scss
+++ b/assets/templates/forex/sass/blocks/account-types.scss
@@ -34,35 +34,53 @@
   position: relative;
   width: 250px;
   box-shadow: 0px 0px 7px 0px rgba(2, 2, 2, 0.35);
-  transition: bottom 1s ease-out 0.5s;
+  cursor: pointer;
+  
+  // &::after {
+  //   display: none;
+  //   content: "";
+  //   position: absolute;
+  //   left: 13px;
+  //   top: -45px;
+  //   width: 45%;
+  //   height: 45px;
+  //   background: linear-gradient(to bottom right,transparent 50%, $sc 50.7%);
+  //   transition: all 0.1s ease-in 0.2s;
+  // }
+  // 
+  // &::before {
+  //   display: none;
+  //   content: "";
+  //   position: absolute;
+  //   right: 12px;
+  //   top: -45px;
+  //   width: 45%;
+  //   height: 45px;
+  //   background: linear-gradient(to bottom left,transparent 50%, $sc 50.7%);
+  //   transition: all 0.1s ease-in 0.2s;
+  // }
+  // 
+  // &:hover {
+  //   &::after,
+  //   &::before {
+  //     display: block;
+  //   }
+  // }
   
   &::after {
-    // display: none;
     content: "";
     position: absolute;
-    left: 13px;
-    top: 45px;
-    width: 45%;
-    height: 45px;
-    background: linear-gradient(to bottom right,transparent 50%, $sc 50.7%);
-  }
-  
-  &::before {
-    // display: none;
-    content: "";
-    position: absolute;
-    right: 12px;
-    top: 45px;
-    width: 45%;
-    height: 45px;
-    background: linear-gradient(to bottom left,transparent 50%, $sc 50.7%);
+    left: 5px;
+    top: -56px;
+    width: 240px;
+    height: 56px;
   }
   
   &:hover {
-    &::after,
-    &::before {
-      // display: block;
-      top: -45px;
+    transform: scale(1.1);
+    
+    &::after {
+      background: url('../img/t-acc-most.png');
     }
   }
   
@@ -114,10 +132,13 @@
   }
 }
 
-
-
-
-
+.account__box--silver {
+  transition: 0.3s;
+  
+  &:hover header {
+    background: #999999;
+  }
+}
 
 
 
