--- a/assets/templates/forex/templates/account-types.html
+++ b/assets/templates/forex/templates/account-types.html
@@ -43,7 +43,7 @@
     <div class="container__temp">
       <p>We present our customers with an account selection that can satisfy each trader’s needs and preferences. Our team has thought about even the smallest of details and produced different account types so you can select the one that best suits your needs. There are different accounts to choose from and each one has its benefits.</p>
       <div class="account__types">
-        <div class="account__box">
+        <div class="account__box  account__box--bronze">
           <header>
             <b>Mini Bronze</b>
             <p>Basic Trading<br>For Beginners</p>
@@ -92,7 +92,7 @@
             <a href="#">Open account</a>
           </footer>
         </div>
-        <div class="account__box">
+        <div class="account__box  account__box--gold">
           <header>
             <b>Premium Golde</b>
             <p>Advanced Trading For<br>Serious Investors</p>
@@ -118,7 +118,7 @@
             <a href="#">Open account</a>
           </footer>
         </div>
-        <div class="account__box">
+        <div class="account__box  account__box--free">
           <header>
             <b>Swap Free</b>
             <p>Anyone Can Trade<br>Swap Free!</p>
@@ -144,7 +144,7 @@
             <a href="#">Open account</a>
           </footer>
         </div>
-        <div class="account__box">
+        <div class="account__box  account__box--zulu">
           <header>
             <b>Zulutrade</b>
             <p>Social &<br>Copytrading</p>
@@ -169,6 +169,10 @@
           </footer>
         </div>
       </div>
+      <p>Trading involves risk of loss</p>
+    </div>
+    <div class="account__pay">
+      <img src="../img/pay-sprite.png" alt="">
     </div>
   </section>
   <footer class="page-footer">
