--- a/assets/templates/forex/sass/blocks/account-types.scss
+++ b/assets/templates/forex/sass/blocks/account-types.scss
@@ -27,7 +27,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  padding-top: 100px;
+  padding: 100px 0;
 }
 
 .account__box {
@@ -59,13 +59,6 @@
   //   background: linear-gradient(to bottom left,transparent 50%, $sc 50.7%);
   //   transition: all 0.1s ease-in 0.2s;
   // }
-  // 
-  // &:hover {
-  //   &::after,
-  //   &::before {
-  //     display: block;
-  //   }
-  // }
   
   &::after {
     content: "";
@@ -93,6 +86,7 @@
     text-align: center;
     text-transform: uppercase;
     background: $mc;
+    transition: 0.3s;
     
     & p {
       margin: 0;
@@ -105,8 +99,8 @@
   
   & p {
     margin: 0;
-    padding: 10px 20px;
-    font-size: 15px;
+    padding: 10px;
+    font-size: 13px;
     font-weight: bold;
   }
   
@@ -132,22 +126,75 @@
   }
 }
 
-.account__box--silver {
+.account__box--bronze {
   transition: 0.3s;
+  
+  & footer {
+    margin-top: 110px;
+  }
   
   &:hover header {
     background: #999999;
   }
 }
 
+.account__box--silver {
+  transition: 0.3s;
+  
+  & footer {
+    margin-top: 20px;
+  }
+  
+  &:hover header {
+    background: #999999;
+  }
+}
 
+.account__box--gold {
+  transition: 0.3s;
+  
+  & footer {
+    margin-top: 5px;
+  }
+  
+  &:hover header {
+    background: #999999;
+  }
+}
 
+.account__box--free {
+  transition: 0.3s;
+  
+  & footer {
+    margin-top: 5px;
+  }
+  
+  &:hover header {
+    background: #999999;
+  }
+}
 
+.account__box--zulu {
+  transition: 0.3s;
+  
+  & footer {
+    margin-top: 150px;
+  }
+  
+  &:hover header {
+    background: #999999;
+  }
+}
 
-
-
-
-
-
+.account__pay {
+  // height: 120px;
+  background: $mc;
+  
+  & img {
+    display: block;
+    margin: auto;
+    padding: 30px 0;
+  }
+}
 
 
