--- a/assets/templates/crypto-b/api/style.css
+++ b/assets/templates/crypto-b/api/style.css
@@ -15,9 +15,11 @@
 	/* margin-top: 90px; */
 	margin-bottom: 30px;
 	padding-bottom: 20px;
-	width: 350px;
+	width: 400px;
 	font-size: 18px;
-	background: rgba(255, 255, 255, 0.9);
+	background: url('../img/panel-b.png') no-repeat;
+	/* background-size: cover; */
+	/* background: rgba(255, 255, 255, 0.9); */
 }
 
 /* .panel-body  */
