--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -7,7 +7,6 @@
   <title>+500crypto</title>
   <link rel="stylesheet" href="css/style.min.css">
   <!-- API -->
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
 	<link rel="stylesheet" href="api/style.css"></link>
   
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
@@ -21,7 +20,7 @@
           <div class="page-header__flex">
             <div class="page-header__logo">
               <a>
-                <img class="page-header__logo" src="img/logo.png" alt="plus500crypto">
+                <img class="page-header__logo" src="img/logo.png" alt="plus500crypto" width="300">
                 <!-- <img class="page-header__logo-s" src="img/logo-s.png" alt="plus500crypto"> -->
               </a>
             </div>
@@ -120,10 +119,10 @@
     <div class="container">
       <div class="trade__flex">
         <div class="trade__left-column">
-          Walk on the path to success.<br>Buy, sell and trade cryptocurrencies
+          Walk on the path to success. Buy, sell and trade cryptocurrencies
         </div>
         <div class="trade__right-column">
-          With +500crypto,<br>you can easily change any blockchain<br>leading asset for any other and it is<br>100% secured and fast
+          With +500crypto, you can easily change any blockchain leading asset for any other and it is 100% secured and fast
         </div>
       </div>
     </div>
