--- a/assets/templates/crypto-b/templates/about.html
+++ b/assets/templates/crypto-b/templates/about.html
@@ -15,7 +15,7 @@
           <div class="page-header__flex">
             <div class="page-header__logo">
               <a href="../index.html">
-                <img class="page-header__logo" src="../img/logo.png" alt="plus500crypto">
+                <img class="page-header__logo" src="../img/logo.png" alt="plus500crypto" width="300">
                 <!-- <img class="page-header__logo-s" src="../img/logo-s.png" alt="plus500crypto"> -->
               </a>
             </div>
