--- a/assets/templates/crypto-b/sass/blocks/page-header.scss
+++ b/assets/templates/crypto-b/sass/blocks/page-header.scss
@@ -164,6 +164,10 @@
     width: 95%;
   }
   
+  .page-header {
+    background-size: cover;
+  }
+  
   .page-header__nav-list {
     width: 100%;
     justify-content: center;
