--- a/assets/templates/crypto-b/api/style.css
+++ b/assets/templates/crypto-b/api/style.css
@@ -70,11 +70,13 @@ span {
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
 	.panel__flex {
 		flex-wrap: wrap;
-		padding-top: 30px;
+		padding: 30px 0;
 	}
 	
   .panel {
+		margin-bottom: 30px;
 		width: 300px;
+		background: rgba(255, 255, 255, 0.9);
 	}
 }
 
